src/objects/Tender_Document_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Average_Uptime_Vending_Machines__c</fullName>
        <label>Average Uptime Vending Machines (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Awarding_Date__c</fullName>
        <label>Awarding Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cacao__c</fullName>
        <label>Cacao</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fairtrade</fullName>
                </value>
                <value>
                    <fullName>UTZ</fullName>
                </value>
                <value>
                    <fullName>EKO</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cert_of_Good_Conduct_JDE_Personnel__c</fullName>
        <inlineHelpText>Certificate of Good Conduct JDE Personnel</inlineHelpText>
        <label>Cert. of Good Conduct JDE Personnel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Client Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coffee_Serving_Solution_1__c</fullName>
        <label>Coffee Serving Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Instant</fullName>
                </value>
                <value>
                    <fullName>Fresh Brew</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee_Serving_Solution_2__c</fullName>
        <label>Coffee Serving Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Instant</fullName>
                </value>
                <value>
                    <fullName>Fresh Brew</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee_Serving_Solution_3__c</fullName>
        <label>Coffee Serving Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Beans</fullName>
                </value>
                <value>
                    <fullName>Instant</fullName>
                </value>
                <value>
                    <fullName>Fresh Brew</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Coffee__c</fullName>
        <label>Coffee</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fairtrade</fullName>
                </value>
                <value>
                    <fullName>UTZ</fullName>
                </value>
                <value>
                    <fullName>EKO</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Info__c</fullName>
        <label>Company Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connectivity_to_Report_Machine_Downtime__c</fullName>
        <label>Connectivity to Report Machine Downtime</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Duration_in_years__c</fullName>
        <inlineHelpText>Contract Duration (in years, exc. extra option years)</inlineHelpText>
        <label>Contract Duration (in years)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost_Price_Fixation_Period__c</fullName>
        <label>Cost Price Fixation Period (in months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cup_Handling__c</fullName>
        <label>Cup Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cups__c</fullName>
        <label>Cups</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Biodegradable</fullName>
                </value>
                <value>
                    <fullName>Recyclable</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Main_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Main Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tender Document Summaries</relationshipLabel>
        <relationshipName>Tender_Document_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Period_Month__c</fullName>
        <label>Current Period/Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Quarter__c</fullName>
        <label>Current Quarter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Q1</fullName>
                </value>
                <value>
                    <fullName>Q2</fullName>
                </value>
                <value>
                    <fullName>Q3</fullName>
                </value>
                <value>
                    <fullName>Q4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Second_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current Second Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Tender Document Summaries (Current Second Supplier)</relationshipLabel>
        <relationshipName>Tender_Document_Summaries1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Publication__c</fullName>
        <label>Date of Publication</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deadline_for_Sending_Tender__c</fullName>
        <label>Deadline for Sending Tender</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Time_New_Vending_Machine__c</fullName>
        <label>Delivery Time New Vending Machine (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth_1__c</fullName>
        <label>Depth (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth_2__c</fullName>
        <label>Depth (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Depth_3__c</fullName>
        <label>Depth (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Displacement_Time_Vending_Machine__c</fullName>
        <inlineHelpText>Displacement time for vending machine (in days)</inlineHelpText>
        <label>Displacement Time Vending Machine (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>E_invoicing_Possible__c</fullName>
        <label>E-invoicing Possible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Market_Share_Supplier_1__c</fullName>
        <inlineHelpText>Estimated market share Supplier 1 at client (%)</inlineHelpText>
        <label>Estimated Market Share Supplier 1 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Market_Share_Supplier_2__c</fullName>
        <inlineHelpText>Estimated market share Supplier 2 at client (%)</inlineHelpText>
        <label>Estimated Market Share Supplier 2 (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exp_Date_of_Contract_with_Option_Years__c</fullName>
        <inlineHelpText>Expiration date of contract with all option years</inlineHelpText>
        <label>Exp Date of Contract with Option Years</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_for_RfP_Questionnaire__c</fullName>
        <label>Expiration Date for RfP Questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_of_Contract__c</fullName>
        <inlineHelpText>Expiration date of contract (exc. extra option years)</inlineHelpText>
        <label>Expiration Date of Contract</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Broker_Name__c</fullName>
        <label>External Broker Name (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Option_Years__c</fullName>
        <label>Extra Option Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fixed_Pricing_Format_by_Client__c</fullName>
        <label>Fixed Pricing Format by Client</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Free_Machine_Displacements_per_year__c</fullName>
        <inlineHelpText>Free machine displacements per year (% of total machines)</inlineHelpText>
        <label>Free Machine Displacements per year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fresh_Leaf_Fresh_Brew_Tea_1__c</fullName>
        <label>Fresh Leaf (Fresh Brew) Tea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fresh_Leaf_Fresh_Brew_Tea_2__c</fullName>
        <label>Fresh Leaf (Fresh Brew) Tea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fresh_Leaf_Fresh_Brew_Tea_3__c</fullName>
        <label>Fresh Leaf (Fresh Brew) Tea</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Operating_by_JDE__c</fullName>
        <label>Full Operating by JDE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Terms_JDE_Applicable__c</fullName>
        <label>General Terms JDE Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grounded_Coffee_Dose_per_cup_in_grams__c</fullName>
        <label>Grounded Coffee Dose per cup (in grams)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_1__c</fullName>
        <label>Height (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_2__c</fullName>
        <label>Height (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_3__c</fullName>
        <label>Height (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Starting_Date__c</fullName>
        <label>Implementation Starting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_tender_Marketing_Support_Needed__c</fullName>
        <label>In-tender Marketing Support Needed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ingredient_Delivery_by_JDE__c</fullName>
        <label>Ingredient Delivery by JDE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Cold_Water_Solution_1__c</fullName>
        <label>Integrated Cold Water Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Cold_Water_Solution_2__c</fullName>
        <label>Integrated Cold Water Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Cold_Water_Solution_3__c</fullName>
        <label>Integrated Cold Water Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Cup_Solution_1__c</fullName>
        <label>Integrated Cup Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Cup_Solution_2__c</fullName>
        <label>Integrated Cup Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Integrated_Cup_Solution_3__c</fullName>
        <label>Integrated Cup Solution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Machine_Rent_after_use_period__c</fullName>
        <label>Invoicing Machine Rent after use period</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoicing_Method__c</fullName>
        <label>Invoicing Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoicing_Period__c</fullName>
        <label>Invoicing Period (month, quarter, etc)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JDE_Internal_Signature_Date__c</fullName>
        <label>JDE Internal Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Liability_Charges_towards_JDE__c</fullName>
        <label>Liability Charges towards JDE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Limited</fullName>
                </value>
                <value>
                    <fullName>Unlimited</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine_Park_Flexibility__c</fullName>
        <inlineHelpText>Machine Park Flexibility (Up/Downsizing &amp; Replacement)</inlineHelpText>
        <label>Machine Park Flexibility</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine_Replacement_During_Office_Hours__c</fullName>
        <label>Machine Replacement During Office Hours?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Current_Beverage_Vending_Solution__c</fullName>
        <label>Main Current Beverage Vending Solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Activation_Budget_Required__c</fullName>
        <label>Marketing Activation Budget Required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Height_of_Vacuum_Flask_1__c</fullName>
        <label>Maximum Height of Vacuum Flask (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Height_of_Vacuum_Flask_2__c</fullName>
        <label>Maximum Height of Vacuum Flask (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Height_of_Vacuum_Flask_3__c</fullName>
        <label>Maximum Height of Vacuum Flask (cm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Speed_per_Cup_1__c</fullName>
        <label>Maximum Speed per Cup (seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Speed_per_Cup_2__c</fullName>
        <label>Maximum Speed per Cup (seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Speed_per_Cup_3__c</fullName>
        <label>Maximum Speed per Cup (seconds)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mgmt_Reporting_Timeframe__c</fullName>
        <inlineHelpText>Management reporting timeframe (in months)</inlineHelpText>
        <label>Mgmt. Reporting Timeframe (in months)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>National_Coffee_Tea_Cost_Pricing_Index__c</fullName>
        <inlineHelpText>National coffee/tea cost pricing index used</inlineHelpText>
        <label>National Coffee/Tea Cost Pricing Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Commercial_Service_Demands__c</fullName>
        <label>Non-Standard Commercial Service Demands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Document_Demands__c</fullName>
        <label>Non-Standard Document Demands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Invoicing_Demands__c</fullName>
        <label>Non-Standard Invoicing Demands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Legal_Demands__c</fullName>
        <label>Non-Standard Legal Demands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Operating_Hours__c</fullName>
        <label>Non-Standard Operating Hours</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Operating_Service_Demand__c</fullName>
        <inlineHelpText>Non-Standard Daily Operating Service Demand</inlineHelpText>
        <label>Non-Standard Operating Service Demand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Pricing_Method__c</fullName>
        <label>Non-Standard Pricing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Standard_Reporting_Demands__c</fullName>
        <label>Non-Standard Reporting Demands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Technical_Service_Demands__c</fullName>
        <label>Non-Standard Technical Service Demands</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Cacao_Varieties__c</fullName>
        <label>Number of Cacao Varieties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Coffee_Canisters_1__c</fullName>
        <label>Number of Coffee Canisters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Coffee_Canisters_2__c</fullName>
        <label>Number of Coffee Canisters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Coffee_Canisters_3__c</fullName>
        <label>Number of Coffee Canisters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Coffee_Serving_Possibilities__c</fullName>
        <label>Number of Coffee Serving Possibilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Locations__c</fullName>
        <inlineHelpText>Number of locations (Buildings etc, not machines)</inlineHelpText>
        <label>Number of Locations (Buildings)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_References_Required__c</fullName>
        <label>Number of References Required</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Tea_Varieties__c</fullName>
        <label>Number of Tea Varieties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tender Opportunity</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Tender Document Summary</relationshipLabel>
        <relationshipName>Tender_Document_Summaries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Sustainability_Demands__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Tender_Criteria__c</fullName>
        <label>Other (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Payment_System_Options_1__c</fullName>
        <label>Payment System Options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
                <value>
                    <fullName>Coins</fullName>
                </value>
                <value>
                    <fullName>Card</fullName>
                </value>
                <value>
                    <fullName>Multiple Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>